# is218-m14-p3

./: .env.example  .gitignore  Dockerfile  INSTALLATION_GUIDE.md  PROJECT_COMPLETE.md  QUICK_START.md  README.md  REFLECTION.md  START_HERE.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.ps1  setup.sh
.github/workflows/: ci-cd.yml  deploy.yml
app/: auth.py  database.py  main.py  schemas.py
static/: index.html  script.js  style.css
tests/: conftest.py  test_e2e.py
